samples/_failures_safe/1761483833_f19f90_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7aaa6443.c: In function ‘tokenize’:
./samples/SAFE/__tmp_7aaa6443.c:156:9: error: expected declaration or statement at end of input
  156 |         skip_whitespace(lexer);
      |         ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7aaa6443.c:156:9: error: expected declaration or statement at end of input
